# SSVMenuSystem

./: CMakeLists.txt
cmake/modules/: CPM-mod.cmake
