cmake_minimum_required(VERSION 2.8)
project(SSVMenuSystem)

#-----------------------------------------------------------------------
# CPM configuration
#-----------------------------------------------------------------------
set(CPM_MODULE_NAME SSVMenuSystem)
set(CPM_LIB_TARGET_NAME ${CPM_MODULE_NAME})

if ((DEFINED CPM_DIR) AND (DEFINED CPM_UNIQUE_ID) AND (DEFINED CPM_TARGET_NAME))
	set(CPM_LIB_TARGET_NAME ${CPM_TARGET_NAME})
	set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CPM_DIR})
	include(CPM)
else()
	set(CPM_DIR "${CMAKE_CURRENT_BINARY_DIR}/cpm-packages" CACHE TYPE STRING)
	find_package(Git)
	if(NOT GIT_FOUND)
		message(FATAL_ERROR "CPM requires Git.")
	endif()
	if (NOT EXISTS ${CPM_DIR}/CPM.cmake)
		message(STATUS "Cloning repo (https://github.com/iauns/cpm)")
		execute_process(
			COMMAND "${GIT_EXECUTABLE}" clone https://github.com/iauns/cpm ${CPM_DIR}
			RESULT_VARIABLE error_code
			OUTPUT_QUIET ERROR_QUIET)
		if(error_code)
			message(FATAL_ERROR "CPM failed to get the hash for HEAD")
		endif()
	endif()
	include(${CPM_DIR}/CPM.cmake)
endif()

SET(SSVDepsRoot "https://github.com/lukeadams/")
CPM_AddModule("SSVCMake"
	GIT_REPOSITORY "${SSVDepsRoot}SSVCMake"
	GIT_TAG "cpm")
SET(CMAKE_MODULE_PATH ${CPM_KV_SOURCEDIR_MAP_SSVCMake}/cmake/modules ${CMAKE_MODULE_PATH})
include(SSVCMake)

#SSVCMake_setDefaultSettings()
#SSVCMake_setDefaultFlags()
#SSVCMake_setDefaultGlobs()
#SSVCMake_findExtlib(vrm_pp)
#SSVCMake_findExtlib(SSVUtils)
#SSVCMake_setAndInstallHeaderOnly()
CPM_InitModule(${CPM_MODULE_NAME})